objects/Candidate__c.object
<CustomObject>
    <label>Candidate</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>Check CV by HR</fullName>
                </value>
                <value>
                    <fullName>Check CV by Manager</fullName>
                </value>
                <value>
                    <fullName>Phone call</fullName>
                </value>
                <value>
                    <fullName>Schedule technical interview</fullName>
                </value>
                <value>
                    <fullName>Technical interview</fullName>
                </value>
                <value>
                    <fullName>Salary negotiation</fullName>
                </value>
                <value>
                    <fullName>recruitment validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Candidate Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>in selection process</fullName>
                    <default>true</default>
                    <label>In selection process</label>
                </value>
                <value>
                    <fullName>in decision making</fullName>
                    <label>In decision making</label>
                </value>
                <value>
                    <fullName>rejected</fullName>
                    <color>#CC0000</color>
                    <label>Rejected</label>
                </value>
                <value>
                    <fullName>archived</fullName>
                    <color>#FF6600</color>
                    <label>Archived</label>
                </value>
                <value>
                    <fullName>hired</fullName>
                    <color>#009900</color>
                    <label>Hired</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>filter__c</fullName>
        <formula>if(DATETIMEVALUE(CreatedDate)&lt;= DATETIMEVALUE(Recruitment_Campaign__r.Deadline__c) , TRUE , FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>cover letter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Seniority__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Seniority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <label>Speciality</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_status__c</fullName>
        <label>Step status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>in progress</fullName>
                </value>
                <value>
                    <fullName>approved</fullName>
                </value>
                <value>
                    <fullName>rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <label>Phone number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_employer__c</fullName>
        <label>Last employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_input__c</fullName>
        <label>Type of input</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creation_date1__c</fullName>
        <formula>DATETIMEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_diploma__c</fullName>
        <label>Type of diploma</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>created_interview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>created interview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_levelNew__c</fullName>
        <label>Education level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bac</fullName>
                </value>
                <value>
                    <fullName>Bac+3</fullName>
                </value>
                <value>
                    <fullName>Bac+5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_after_deadline__c</fullName>
        <formula>DATETIMEVALUE(CreatedDate) - DATETIMEVALUE(Recruitment_Campaign__r.Deadline__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days after deadline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruitment_Channel__c</fullName>
        <label>Recruitment Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruitment Campaign</label>
        <referenceTo>Recruitment_Campaign2__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_first_experience__c</fullName>
        <label>Date of first experience</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seniority_in_the_position__c</fullName>
        <label>Seniority in the position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Candidate</fullName>
        <active>true</active>
        <label>Candidate</label>
    </recordTypes>
    <recordTypes>
        <fullName>HR_record_type</fullName>
        <active>true</active>
        <label>HR record type</label>
    </recordTypes>
    <validationRules>
        <fullName>digits</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( Phone_number__c)) &amp;&amp; LEN( Phone_number__c) &lt;&gt; 8</errorConditionFormula>
        <errorDisplayField>Phone_number__c</errorDisplayField>
        <errorMessage>Phone number must be 8 digits</errorMessage>
    </validationRules>
</CustomObject>